--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="rythmgame">rythmgame</a>
-    <a href="vidtest">vid test</a>
+    <a href="rythmgame">
+        <div>rythmgame</div>
+    </a>
+    <a href="vidtest">
+        <div>rythmgame</div>
+    </a>
 </body>
 </html>
