--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div>rythmgame</div>
     </a>
     <a href="vidtest">
-        <div>rythmgame</div>
+        <div>vid test</div>
     </a>
 </body>
 </html>
