--- a/vidtest.html
+++ b/vidtest.html
@@ -10,7 +10,7 @@
     <iframe 
         width="1237" 
         height="696" 
-        src="https://www.youtube.com/embed/gOG1hK5K1L4?autoplay=1" 
+        src="https://www.youtube.com/embed/gOG1hK5K1L4?autoplay=1&playlist=M7lc1UVf-VE" 
         title="YouTube video player" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
