--- a/vidtest.html
+++ b/vidtest.html
@@ -5,16 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        .main
+        {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
-    <iframe 
-        width="1237" 
-        height="696" 
-        src="https://www.youtube.com/embed/gOG1hK5K1L4?autoplay=1&playlist=M7lc1UVf-VE" 
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-    </iframe>
+    
+    <div class="main">
+        <iframe 
+            width="1237" 
+            height="696" 
+            src="https://www.youtube.com/embed/gOG1hK5K1L4?autoplay=1" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+        </iframe>
+    </div>
 </body>
 </html>
