--- a/vidtest.html
+++ b/vidtest.html
@@ -21,7 +21,7 @@
         <iframe 
             width="1237" 
             height="696" 
-            src="https://www.youtube.com/embed/gOG1hK5K1L4?autoplay=1&playlist=gOG1hK5K1L4" 
+            src="https://www.youtube.com/embed/gOG1hK5K1L4?autoplay=1&loop=1" 
             title="YouTube video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
