Update and rename makers.html to DontFryMe/makers.html

--- a/DontFryMe/makers.html
+++ b/DontFryMe/makers.html
@@ -22,7 +22,7 @@
             </div>
                 <div class="column1">
                     <h3>Bij het maken van dit project, hebben we gekozen om de groepen op te splitsen. 3 mensen gingen werken aan de game en 3 mensen gingen werken aan de website/downloadpage.
-                        De game is gecreëerd door 3 man, genaamd: Calvin Ly, Baran Donmez en Mikel Jansen.
+                        De game is gecreëerd door 3 man, genaamd: Calvin, Baran Donmez en Mikel Jansen.
                         Zij hebben onderling een taakverdeling gemaakt binnen het creëren van de game. Calvin was verantwoordelijk voor het grootste deel van de achterliggende coding; Baran heeft de game ontworpen, oftewel designs van de levels en pagina’s gemaakt; Mikel heeft de tekstballonen toegevoegd en de gedane taken genoteerd.
                         De website is in elkaar gezet door: Esmee Blankers, Niek Brok en Guus Steenbeek. Taken zijn hier ook onderling verdeeld. Esmee heeft de menubalk in elkaar gezet met de daarbij benodigde links, Niek en Guus hebben de achtergrond, contouren, button en afbeeldingen erin gezet.
                         Samen zijn Esmee en Guus verantwoordelijk voor het inbrengen van de tekst.</h3>
