--- a/lol/epik.html
+++ b/lol/epik.html
@@ -3,11 +3,11 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://i.pximg.net/img-master/img/2023/04/02/21/00/52/106804299_p0_master1200.jpg">
+    <meta property="og:image" content="mrloler.github.io/blob/main/lol/106804299_p0_master1200.jpg">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
-    <meta property="og:video:url" content="https://www.youtube.com/watch?v=l60MnDJklnM">
+    <meta property="og:video:url" content="mrloler.github.io/blob/main/lol/Michael Jordan Stop It, Get Some Help.mp4">
     <!-- If you want a seamless transition between your thumbnail size and video size, adjust these values to match your thumbnail resolution. -->
     <!-- However, it will be all wonky if your thumbnail is vertical and your video is horizontal. This works best with similar aspect ratios -->
     <meta property="og:video:height" content="202">
