--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-<h1> Hello </h1>
-
-<a href="youtube.com"> link </a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href="projects/rythmgame">
+        <div>rythmgame</div>
+    </a>
+    <a href="projects/vidtest">
+        <div>vid test</div>
+    </a>
+</body>
+</html>
