--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
     <a href="projects/vidtest">
         <div>vid test</div>
     </a>
+    <a href="projects/DontFryMe">
+        <div>Dont Fry Me</div>
+    </a>
+    <a href="projects/3dkb">
+        <div>3D Keyboard tester</div>
+    </a>
 </body>
 </html>
