Added rocket jmup game

--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
     <a href="projects/3dkb">
         <div>3D Keyboard tester</div>
     </a>
+    <a href="rocketjumpgame.zip">
+        <div>Rocket Jump Game</div>
+    </a>
+
 </body>
 </html>
