--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <a href="projects/3dkb">
         <div>3D Keyboard tester</div>
     </a>
-    <a href="rocketjumpgame.zip">
+    <a href="projects/rocketjumpgame.zip">
         <div>Rocket Jump Game</div>
     </a>
-
+    <a href="projects/2d_shooter_test.zip">
+        <div>2D Shooter Test (Armed Paws Old Version)</div>
+    </a>
 </body>
 </html>
