--- a/index.html
+++ b/index.html
@@ -5,25 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
-    <a href="projects/rythmgame">
-        <div>rythmgame</div>
-    </a>
-    <a href="projects/vidtest">
-        <div>vid test</div>
-    </a>
-    <a href="projects/DontFryMe">
-        <div>Dont Fry Me</div>
-    </a>
-    <a href="projects/3dkb">
-        <div>3D Keyboard tester</div>
-    </a>
-    <a href="projects/rocketjumpgame.zip">
-        <div>Rocket Jump Game</div>
-    </a>
-    <a href="projects/2d_shooter_test.zip">
-        <div>2D Shooter Test (Armed Paws Old Version)</div>
-    </a>
+    <header>
+        <a href="/"><img src="media/logo.png" id="logo"></a>
+        <nav class="default-section">
+            <a href="/">home</a>
+            <a href="#games">games</a>
+        </nav>
+    </header>
+    <main id="games">
+        <div class="main-box">
+            <div>
+                <img src="media/title-screen-image.jpg" class="titlebar">
+            </div>
+            <h1> Hello </h1>
+            <a href="projects/rythmgame" class="box">rythmgame</a>
+            <a href="projects/vidtest" class="box">vid test</a>
+            <a href="projects/DontFryMe" class="box">Dont Fry Me</a>
+            <a href="projects/3dkb" class="box">3D Keyboard tester</a>
+            <a href="projects/rocketjumpgame.zip" class="box">Rocket Jump Game</a>
+            <a href="projects/2d_shooter_test.zip" class="box">2D Shooter Test (Armed Paws Old Version)</a>
+        </div>
+    </main>
+    <footer>
+        <div class="default-section">
+            <a href="/"><img src="media/logo.png" id="logo"></a>
+        </div>
+
+    </footer>
+
 </body>
 </html>
