Added AP html5 to website

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <a href="projects/DontFryMe" class="box">Dont Fry Me</a>
             <a href="projects/3dkb" class="box">3D Keyboard tester</a>
             <a href="projects/rocketjumpgame.zip" class="box">Rocket Jump Game</a>
-            <a href="projects/2d_shooter_test.zip" class="box">2D Shooter Test (Armed Paws Old Version)</a>
+            <a href="projects/2d_shooter_test.zip" class="box">2D Shooter (Old Version)</a>
+            <a href="projects/ap_game_html/" class="box">2D Shooter (New Version)</a>
         </div>
     </main>
     <footer>
